--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,6 +11,7 @@ env:
 jobs:
   build_linux64:
     runs-on: ubuntu-latest
+    container: quay.io/pypa/manylinux2014_x86_64
     steps:
     - uses: actions/checkout@v2
     - uses: actions-rs/toolchain@v1
@@ -33,26 +34,29 @@ jobs:
 
   build_linux32:
     runs-on: ubuntu-latest
+    container: quay.io/pypa/manylinux2014_i686
+    defaults:
+      run:
+        shell: sh
     steps:
-    - uses: actions/checkout@v2
-    - uses: actions-rs/toolchain@v1
-      with:
-          toolchain: stable
-          target: i686-unknown-linux-gnu
-          override: true
-    - name: Install gcc-multilib
-      run: sudo apt-get install gcc-multilib
+    - uses: actions/checkout@v1
+    - name: "Install Rust"
+      run: curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- --default-host i686-unknown-linux-gnu -y
     - name: Build
-      run: cargo build --verbose --bin gluac --features parking_lot --target i686-unknown-linux-gnu --release
+      run: |
+        source $HOME/.cargo/env
+        cargo build --verbose --bin gluac --features parking_lot --target i686-unknown-linux-gnu --release
     - name: Strip debug info
       run: strip target/i686-unknown-linux-gnu/release/gluac
+    - name: Make dir
+      run: mkdir target/i686-unknown-linux-gnu/release/releasedir
     - name: Rename binary
-      run: mv target/i686-unknown-linux-gnu/release/gluac target/i686-unknown-linux-gnu/release/gluac_linux32
+      run: mv target/i686-unknown-linux-gnu/release/gluac target/i686-unknown-linux-gnu/release/releasedir/gluac_linux32
     - name: Release
-      uses: softprops/action-gh-release@v1
-      with:
-        files: target/i686-unknown-linux-gnu/release/gluac_linux32
+      uses: fnkr/github-action-ghr@v1
+      if: startsWith(github.ref, 'refs/tags/')
       env:
+        GHR_PATH: target/i686-unknown-linux-gnu/release/releasedir
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   build_win32:
