--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,23 +13,24 @@ jobs:
     runs-on: ubuntu-latest
     container: quay.io/pypa/manylinux2014_x86_64
     steps:
-    - uses: actions/checkout@v2
-    - uses: actions-rs/toolchain@v1
-      with:
-          toolchain: stable
-          target: x86_64-unknown-linux-gnu
-          override: true
+    - uses: actions/checkout@v1
+    - name: "Install Rust"
+      run: curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- --default-host x86_64-unknown-linux-gnu -y
     - name: Build
-      run: cargo build --verbose --bin gluac --features parking_lot --target x86_64-unknown-linux-gnu --release
+      run: |
+        source $HOME/.cargo/env
+        cargo build --verbose --bin gluac --features parking_lot --target x86_64-unknown-linux-gnu --release
     - name: Strip debug info
       run: strip target/x86_64-unknown-linux-gnu/release/gluac
+    - name: Make dir
+      run: mkdir target/x86_64-unknown-linux-gnu/release/releasedir
     - name: Rename binary
-      run: mv target/x86_64-unknown-linux-gnu/release/gluac target/x86_64-unknown-linux-gnu/release/gluac_linux64
+      run: mv target/x86_64-unknown-linux-gnu/release/gluac target/x86_64-unknown-linux-gnu/release/releasedir/gluac_linux64
     - name: Release
-      uses: softprops/action-gh-release@v1
-      with:
-        files: target/x86_64-unknown-linux-gnu/release/gluac_linux64
+      uses: fnkr/github-action-ghr@v1
+      if: startsWith(github.ref, 'refs/tags/')
       env:
+        GHR_PATH: target/x86_64-unknown-linux-gnu/release/releasedir
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   build_linux32:
